--- a/Me/Me.scss
+++ b/Me/Me.scss
@@ -119,9 +119,19 @@
 
 html.device-mobile {
 
-	.me {
-		width: calc(100vw - 30px);
-		min-width: 0;
+	@media only screen and (orientation: portrait) {
+
+		.me {
+			width: calc(100vw - 30px);
+			min-width: 0;
+		}
+
 	}
 
+	@media only screen and (orientation: landscape) {
+
+		.me {
+			min-width: 250px;
+		}
+	}
 }
