--- a/VideoChat.scss
+++ b/VideoChat.scss
@@ -5,7 +5,7 @@
 	
 	> .state {
 		position: fixed;
-		z-index: 100;
+		z-index: 600;
 		display: flex;
 		flex-direction: row;
 		justify-content: center;
@@ -34,13 +34,20 @@
 		}
 	}
 	
+	// currently only referenced within AVT-EBY project
+	> .btn-close {
+		display: none;
+	}
+
 	> .me-container {
 		position: fixed;
-		z-index: 100;
+		z-index: 2000;
 		overflow: hidden;
-		box-shadow: 0px 5px 12px 2px rgba(#111, 0.5);
-		transition-property: border-color;
+		box-shadow: 0 0 12px 2px rgba(17, 17, 17, 0.5);
+		transition-property: border-color, opacity, box-shadow;
 		transition-duration: 0.2s;
+		opacity: .6;
+		cursor: move;
 
 		&.active-speaker {
 			border-color: green;
@@ -51,6 +58,13 @@
 		bottom: 70px;
 		left: 20px;
 		border: 1px solid rgba(#fff, 0.15);
+
+		&:hover,
+		&:focus {
+			opacity: 1;
+			box-shadow: 0 0 12px 6px rgba(17, 17, 17, 0.85);
+			border-color: #fff;
+		}
 	}
 	
 	> .sidebar {
