--- a/global-bootstrap.55.scss
+++ b/global-bootstrap.55.scss
@@ -271,6 +271,22 @@ $pagination_min_size: get_value(minSize, bootstrap, pagination);
 
 html.device-mobile {
 
+    .modal {
+
+        &.modal-fullscreen-mobile {
+
+            .modal-dialog {
+                margin: 0;
+
+                .modal-content {
+                    height: 100vh;
+                    padding-bottom: 4rem; // account for possible docked menu obscuring content
+                }
+            }
+        }
+
+    }
+
     // collapse pagination links on mobile (prevents clipping)
     .pagination .page-item .page-link {
         margin-left: 0;
