--- a/Collapsible.scss
+++ b/Collapsible.scss
@@ -7,6 +7,10 @@
 		padding: 2rem 1.5rem;
 		border: 1px solid rgb(240,240,240);
 
+		&::before {
+			display: none;
+		}
+
 		&::-webkit-details-marker {
 			display: none;
 		}
