.break-word utility class added

--- a/global-utilities.95.scss
+++ b/global-utilities.95.scss
@@ -172,3 +172,7 @@ html.device-desktop {
 	-webkit-focus-ring-color: rgba(255, 255, 255, 0) !important;
 	outline: none;
 } 
+
+.break-word {
+	word-break: break-word;
+}
