--- a/Peer/Peer.scss
+++ b/Peer/Peer.scss
@@ -1,6 +1,13 @@
 .peer{
 	padding-top: 56.25%;
 
+	> .raised-hand {
+		position: absolute;
+		z-index: 10;
+		top: 0;
+		left: 0;
+	}
+
 	> .indicators {
 		position: absolute;
 		z-index: 10;
