Added more buttons and added check to hand raised icon that appears.

--- a/VideoChat.scss
+++ b/VideoChat.scss
@@ -130,6 +130,14 @@
 				}
 			}
 
+			&.stop-sharing {
+				color: #b9bdc4;
+				font-size: 22px;
+				.icon {
+					margin: 21%;
+				}
+			}
+
 			&.restart-ice {
 				background-image: url('./images/icon_restart_ice_white.svg');
 			}
