--- a/Peer/Peer.scss
+++ b/Peer/Peer.scss
@@ -5,7 +5,9 @@
 		position: absolute;
 		z-index: 10;
 		top: 0;
-		left: 0;
+		left: 2;
+		color: white;
+		font-size: 48px;
 	}
 
 	> .indicators {
