--- a/Me/Me.scss
+++ b/Me/Me.scss
@@ -115,6 +115,24 @@
 			}
 		}
 	}
+	> .live-indicator{
+		position: absolute;
+		top: 5px;
+		left: 5px;
+		border-radius: 8px;
+		padding: 0px 7px;
+		z-index: 10;
+		text-transform: uppercase;
+		font-weight: bold;		
+		&.on{
+			background: #F04747;
+			color: white;
+		}
+		&.off{
+			background: lightgrey;
+			color: grey;
+		}
+	}
 }
 
 html.device-mobile {
