Added ability to add field hints

--- a/auto-form.scss
+++ b/auto-form.scss
@@ -3,7 +3,7 @@
 		color: red;
 	}
 	
-	.localized-field-label{
+	.localized-field-label, .hint-field-label{
 		color: #ddd;
 		margin-left: 5px;
 	}
