--- a/canvas-editor.scss
+++ b/canvas-editor.scss
@@ -9,7 +9,8 @@
 .canvas-editor {
 	margin-top: 2rem;
 	text-align: left;
-
+	transform: scaleX(1); /* position: fixed is relative to transforms too, so we can use this to contain them */
+	
 	.canvas-editor-bordered {
 		border: 1px solid lightgrey;
 		border-radius: 4px;
