--- a/PeerView/PeerView.scss
+++ b/PeerView/PeerView.scss
@@ -43,7 +43,18 @@
 			filter: grayscale(100%) brightness(135%) blur(5px);
 		}
 	}
-
+	
+	> .video-avatar{
+		position: absolute;
+		width:100%;
+		height:100%;
+		top:0;
+		left:0;
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center top;
+	}
+	
 	> audio {
 		display: none;
 
